[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kaag-pdf-exports"
version = "0.2.0"
description = "Centralized PDF export styling for KAAG projects"
readme = "README.md"
authors = [
	{ name = "RobbienLive" }
]
license = { file = "LICENSE" }
requires-python = ">=3.9"
classifiers = [
	"Development Status :: 4 - Beta",
	"Intended Audience :: Developers",
	"License :: OSI Approved :: MIT License",
	"Programming Language :: Python :: 3.9",
	"Programming Language :: Python :: 3.10",
	"Programming Language :: Python :: 3.11",
	"Programming Language :: Python :: 3.12",
]

[project.urls]
Homepage = "https://github.com/yourusername/kaag-pdf-exports"

[tool.setuptools.packages.find]
where = ["src"]
